tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__status_surface_preview_alias_provider_model_single_prefix.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: 123456/kimi-for-coding
terminal title: 123456/kimi-for-coding
